<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".view.chooseUserType.ChooseUserTypeActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivSplash"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_100sdp"
                android:src="@drawable/group_22842"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvSplashEasy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_80sdp"
                android:gravity="center"
                android:text="@string/easy_booking"
                android:textSize="@dimen/_12sdp"
                android:textColor="#505050"
                android:fontFamily="@font/nunitosans_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivSplash" />


            <TextView
                android:id="@+id/tvSplashSub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#b2b2b2"
                android:text="@string/easy_bookingsubTitle"
                android:textSize="@dimen/_12sdp"
                android:fontFamily="@font/nunitosans_regular"
                app:layout_constraintBottom_toTopOf="@+id/tvSplashLoginAsC"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSplashEasy" />

            <TextView
                android:id="@+id/tvSplashLoginAsC"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_70sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/round_corner_bg"
                android:fontFamily="@font/nunitosans_regular"
                android:gravity="center"
                android:text="@string/login_as_a_customer"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toTopOf="@+id/tvSplashLoginAsD"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSplashSub"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/tvSplashLoginAsD"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_30sdp"
                android:layout_marginBottom="@dimen/_80sdp"
                android:background="@drawable/round_corner_bg"
                android:fontFamily="@font/nunitosans_regular"
                android:gravity="center"
                android:text="@string/login_as_a_driver"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>