<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.wisam.taxi.view.changePassword.ChangePasswordActivity">

    <ImageView
        android:id="@+id/ivChangePassBack"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:src="@drawable/left_arrow"
        android:tint="@color/colorBlack"
        app:layout_constraintBottom_toBottomOf="@+id/tvChangePassTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvChangePassTitle" />

    <ImageView
        android:id="@+id/ivChangePassCorrect"
        android:layout_width="@dimen/_16sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:src="@drawable/ic_donee"
        app:layout_constraintBottom_toBottomOf="@+id/tvChangePassTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvChangePassTitle" />


    <TextView
        android:id="@+id/tvChangePassTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/muli_semibold"
        android:gravity="center"
        android:text="@string/changepassword"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivChangePassBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewChangePass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@color/colorLightGrey"
        app:layout_constraintBottom_toTopOf="@+id/rvExplore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePassTitle" />


    <EditText
        android:id="@+id/etCurrentPass"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/square_stroke_bg_5sdp"
        android:fontFamily="@font/muli"
        android:hint="@string/currentpassword"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textAlignment="viewStart"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewChangePass" />

    <EditText
        android:id="@+id/etChangePassNew"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/square_stroke_bg_5sdp"
        android:fontFamily="@font/muli"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textAlignment="viewStart"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCurrentPass" />

    <EditText
        android:id="@+id/etChangePassConf"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/square_stroke_bg_5sdp"
        android:fontFamily="@font/muli"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textAlignment="viewStart"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:textColor="@color/colorBlack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etChangePassNew" />

</androidx.constraintlayout.widget.ConstraintLayout>
