<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".view.languageSelect.LanguageSelectionActivity">

    <ImageView
        android:id="@+id/ivLangBack"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/left_arrow"
        android:tint="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ivLangLogo"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:src="@drawable/subject"
        app:layout_constraintStart_toEndOf="@+id/ivLangBack"
        app:layout_constraintTop_toBottomOf="@+id/ivLangBack" />

    <TextView
        android:id="@+id/tvchooselang"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:fontFamily="@font/nunitosans_bold"
        android:text="@string/choosepreferlang"
        android:textColor="@color/_1a1824"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivLangLogo"
        app:layout_constraintTop_toBottomOf="@+id/ivLangLogo" />


    <TextView
        android:id="@+id/tvPleaseselect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_15sdp"
        android:fontFamily="@font/nunitosans_bold"
        android:text="@string/plsselectLanguage"
        android:textColor="@color/_919191"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivLangLogo"
        app:layout_constraintTop_toBottomOf="@+id/tvchooselang" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEnglish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivLangLogo"
        app:layout_constraintTop_toBottomOf="@+id/tvPleaseselect">

        <TextView
            android:id="@+id/tvEnglish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfuitext_semibold"
            android:text="@string/english"
            android:paddingVertical="@dimen/_10sdp"
            android:textColor="@color/_1a1824"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toStartOf="@+id/radiobtneng"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <ImageView
            android:id="@+id/radiobtneng"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/ellipse_506"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/tvEnglish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvEnglish"
            app:layout_constraintTop_toTopOf="@+id/tvEnglish" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clArabic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivLangLogo"
        app:layout_constraintTop_toBottomOf="@+id/clEnglish">

        <TextView
            android:id="@+id/tvArabic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfuitext_semibold"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/arabic"
            android:textColor="@color/_1a1824"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/radiobtnarab"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/radiobtnarab"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:scaleType="centerInside"
            android:src="@drawable/ellipse_506"
            app:layout_constraintBottom_toBottomOf="@+id/tvArabic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvArabic"
            app:layout_constraintTop_toTopOf="@+id/tvArabic" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>