<androidx.constraintlayout.widget.ConstraintLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.wisam.taxi.view.home.fragments.ExploreFragment">

    <TextView
        android:id="@+id/tvExploreTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/nunitosans_bold"
        android:gravity="center"
        android:text="@string/explore"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintBottom_toTopOf="@+id/viewExplore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clswitchExplore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/tvExploreTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvExploreTitle">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchExplore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:checked="true"
            android:focusable="false"
            android:fontFamily="@font/nunitosans_bold"
            android:thumb="@drawable/thumb_selector_explore"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:showText="false"
            app:track="@drawable/track_selector_explore" />

        <TextView
            android:id="@+id/tvSwitchChooseOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_4sdp"
            android:fontFamily="@font/nunitosans_bold"
            android:gravity="end"
            android:visibility="invisible"
            android:text="@string/inactive"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="@+id/switchExplore"
            app:layout_constraintEnd_toEndOf="@+id/switchExplore"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/switchExplore"
            app:layout_constraintTop_toTopOf="@+id/switchExplore" />


        <TextView
            android:id="@+id/tvswitchExploreActive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunitosans_bold"
            android:gravity="start"
            android:paddingStart="@dimen/_5sdp"
            android:text="@string/active"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="@+id/switchExplore"
            app:layout_constraintEnd_toEndOf="@+id/switchExplore"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/switchExplore"
            app:layout_constraintTop_toTopOf="@+id/switchExplore" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewExplore"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_2sdp"
        android:layout_marginTop="@dimen/_6sdp"
        android:background="@color/colorLightGrey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvExploreTitle" />
    
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swp_rvExplore"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_4sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/tab_unselected"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewExplore">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvExplore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/CustomRvTheme"
            android:background="@color/tab_unselected" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/nodata_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nodata"
        android:textSize="@dimen/_15sdp"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:fontFamily="@font/nunitosans_bold"
        android:textColor="#c1c1c1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewExplore"/>


</androidx.constraintlayout.widget.ConstraintLayout>
